src/test/ui/parser/diff-markers/struct.stderr
error: encountered diff marker
  --> $DIR/struct.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ start
LL |     x: u8,
LL | =======
   | ^^^^^^^ middle
LL |     x: i8,
LL | >>>>>>> branch
   | ^^^^^^^ end

error: aborting due to previous error

